--- a/css/stylesheet.sass
+++ b/css/stylesheet.sass
@@ -1,6 +1,6 @@
+
 body
-  min-height: 1000px
-  z-index: -3
+
 header
   //background-color: $GRAY
   min-width: 712px
@@ -63,7 +63,7 @@ header
   height: 150px
   margin-bottom: 0px
   opacity: 1
-  z-index: 7
+  z-index: 11
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
 
 .parallax_row-2
@@ -80,6 +80,28 @@ header
   height: 500px
   opacity: 1
   z-index: 6
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
+
+.parallax_row-4
+  position: relative
+  height: 500px
+  opacity: 1
+  z-index: 7
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
+
+.parallax_row-5
+  position: relative
+  height: 500px
+  opacity: 1
+  z-index: 8
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
+
+.parallax_row
+  position: relative
+  /*height: 500px
+  opacity: 1
+  z-index: 10
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
 
 .first-card
   margin-top: 200px
