--- a/css/stylesheet.sass
+++ b/css/stylesheet.sass
@@ -1,4 +1,3 @@
-
 body
 
 header
@@ -72,15 +71,20 @@ header
     position: top center
     size: auto 1080px
   position: relative
-  height: 1080px
-  z-index: 4
+  z-index: 10
+  top: -50px
+
+.parallax_row-2 .tabs
+  background-color: #d50000
+  color: #000
 
 .parallax_row-3
   position: relative
   height: 500px
   opacity: 1
-  z-index: 6
+  z-index: 11
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
+  top: -1000px
 
 .parallax_row-4
   position: relative
@@ -106,3 +110,26 @@ header
 .first-card
   margin-top: 200px
   opacity: 0
+
+/* Bubble with an isoceles triangle
+.triangle-isosceles
+  position: relative
+  padding: 15px
+  margin: 1em 0 3em
+  color: #000
+  background: #d50000
+  border-radius: 10px
+  /*background: linear-gradient(top, #f9d835, #f3961c)
+
+/* creates triangle */
+.triangle-isosceles:after
+  content: ""
+  /* reduce the damage in FF3.0 */
+  display: block
+  position: absolute
+  left: -50px
+  bottom: 10px
+  width: 0
+  border-width: 30px 50px 0
+  border-style: solid
+  border-color: #d50000 transparent
