Added do to hardrive switch

--- a/css/stylesheet.sass
+++ b/css/stylesheet.sass
@@ -23,6 +23,24 @@ header
     background: url('../img/logo.png') -133px 80px
     float: left
 
+.cat-2
+  /*opacity: 0
+  z-index: 11
+  position: absolute
+  .cat-background1
+    width: 133px
+    height: 136px
+    background: url('../img/logo.png') 0 135px
+    float: left
+
+  .cat-background2
+    margin-top: 55px
+    width: 20px
+    height: 50px
+    background: url('../img/logo.png') -133px 80px
+    float: left
+
+
 .logo
     float: left
     margin-left: 150px
@@ -119,6 +137,7 @@ header
   color: #000
   background: #d50000
   border-radius: 10px
+  opacity: 0
   /*background: linear-gradient(top, #f9d835, #f3961c)
 
 /* creates triangle */
