--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,2 +1,14 @@
-@import '../../node_modules/bootstrap/scss/bootstrap';
-@import './custom.scss';
+// Import custom variables (overrides Bootstrap default variables)
+@import "./variables.scss";
+
+// Import Bootstrap
+@import "../../node_modules/bootstrap/scss/bootstrap";
+
+// Import custom styles
+@import "./global.scss";
+@import "./navbar.scss";
+@import "./projects";
+@import "./carousel";
+@import "./shine";
+// @import "./masthead.scss";
+@import "./portfolio.scss";
