--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -1,5 +1,4 @@
 .projects-section {
-  padding: 10rem 0;
   .featured-text {
     padding: 2rem;
     @media (min-width: 992px) {
@@ -11,10 +10,10 @@
     padding: 3rem;
     font-size: 90%;
     @media (min-width: 992px) {
-      padding: 5rem;
+      // padding: 5rem;
       hr {
         border-color: $primary;
-        border-width: .25rem;
+        border-width: 0.25rem;
         width: 30%;
       }
     }
