--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,8 +7,10 @@
 // Import custom styles
 @import "./global.scss";
 @import "./navbar.scss";
-@import "./projects";
 @import "./carousel";
+@import "./callout";
+@import "./projects";
 @import "./shine";
+@import "./services";
 // @import "./masthead.scss";
 @import "./portfolio.scss";
